code25_all/swift/27125309.txt
MY_PROJECT/Bridging-Header.h:21:9: note: in file included from /MY_PROJECT/Bridging-Header.h:21:
import <Chartboost/Chartboost.h>
        ^
/MY_PROJECT/Chartboost.framework/Headers/Chartboost.h:16:42: error: function definition is not allowed here
typedef NS_ENUM(NSUInteger, CBFramework) {
                                         ^
/Users/MY_PROJECT/Bridging-Header.h:21:9: note: in file included from /Users/MY_PROJECT/Bridging-Header.h:21:
import <Chartboost/Chartboost.h>
unknown>0: error: failed to import bridging header '/Users/bewakoofmac/Desktop/Jumpy Tiles/jumpytiles/jumpytiles/Bridging-Header.h'

